# HybridPDR

./: .gitignore  Dockerfile  Dockerfile.core  Dockerfile.mathematica  README.md  mathematica_inst.sh  setup.sh
app/: Makefile.options  README  app.eliom
data/: sample.xml
flask/: .gitignore  README  app.py  package-lock.json  package.json  webpack.config.js
paper/: body.tex  local.tex  (+3 more)
src/: README.md  backprop.ml  backprop.mli  cnf.ml  cnf.mli  config.ml  dischargeVC.ml  dischargeVC.mli  dl.ml  dl.mli  env.ml  env.mli  frame.ml  frame.mli  hpdr.ml  hpdr.opam  hpdrMain.ml  jbuild  mySet.ml  mySet.mli  parseFml.ml  parseFml.mli  pdr.ml  pdr.mli  spaceexComponent.ml  spaceexComponent.mli  util.ml  z3Intf.ml  z3_example.ml
src/.circleci/: config.yml
src/app/: .merlin  jbuild
src/examples/examples/: README.md
src/examples/examples/bball/: bball.cfg
src/examples/examples/bball_nondet/: bball_nondet.xml
src/examples/examples/circle/: circle.xml  circle_tactic1.smc  circle_tactic1.smt2  circle_tactic2.smt2  circle_tactic3.smt2  circle_tactic3_dumb.smt2  circle_tactic4.smt2  circle_tactic4_unsuccessful.smt2  circle_tactic5.nb  circle_tactic5.smt2
src/examples/examples/etcs/: etcs.xml
src/examples/examples/filtered_oscillator/: filtered_oscillator.xml
src/examples/examples/line/: line.xml
src/examples/examples/line2/: line.xml
src/examples/filtered_oscillator/: README.md  filtered_oscillator.xml
src/lib/: .merlin  dynamics.ml  dynamics.mli  expr.ml  guard.ml  guard.mli  guard.ml~  hpdr.ml  hybridAutomata.ml  hybridAutomata.ml~  jbuild  jbuild~
(+8 files in other folders)
